Change script name to a more meaningful one

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "run": "node index.js"
+    "startBot": "node index.js"
   },
   "repository": {
     "type": "git",
