--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
   "bugs": {
     "url": "https://github.com/jakobbouchard/yadob/issues"
   },
-  "homepage": "https://github.com/jakobbouchard/yadob#readme"
+  "homepage": "https://yadob.jakobbouchard.dev"
 }
