--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: YADOB
 description: Yet Another Open Discord Bot
-show_downloads: true
+show_downloads: false
 google_analytics: UA-156012637-5
