Fix bot description in docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: YADOB
-description: Yet Another Open Discord Bot
+description: Yet Another Discord Open Bot
 show_downloads: false
 google_analytics: UA-156012637-5
