--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "dependencies": {
     "discord.js": "^12.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "archiver": "^3.1.1",
+    "js-yaml": "^3.13.1"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "zipBeta": "node ./release/zipProject.js -beta",
+    "zipRelease": "node ./release/zipProject.js -release"
   },
   "repository": {
     "type": "git",
